@@ -93,10 +93,12 @@ private:
 	wxButton *BrowseButton;
 	wxButton *StartButton;
 	wxButton *CloseButton;
+	wxCheckBox *AttachmentCheck;
 
 	void OnStart(wxCommandEvent &event);
 	void OnClose(wxCommandEvent &event);
 	void OnBrowse(wxCommandEvent &event);
+	void OnCheck(wxCommandEvent &event);
 
 public:
 	DialogFontsCollector(wxWindow *parent);
@@ -110,5 +112,6 @@ public:
 // IDs
 enum {
 	BROWSE_BUTTON = 1100,
-	START_BUTTON
+	START_BUTTON,
+	ATTACHMENT_CHECK
 };
